# Infection-Diseases

./: README.md
Coronavirus/: README.md
Coronavirus/Aminoacids-Mapper/: CMakeLists.txt
Coronavirus/Aminoacids-Mapper/inputs/wuhan-1/: input.txt
Coronavirus/Aminoacids-Mapper/outputs/: aminoacids_sequence.txt  proteins.txt
Coronavirus/Aminoacids-Mapper/outputs/brazil/: output.txt
Coronavirus/Aminoacids-Mapper/outputs/wuhan-1/: output.txt
Coronavirus/Aminoacids-Mapper/scripts/codons_table_generator/: generator.py  table.txt
Coronavirus/Aminoacids-Mapper/scripts/gene_bank_reader/: parser.py
Coronavirus/Aminoacids-Mapper/scripts/gene_bank_reader/brazil/: gene_sequence.txt  protein_sequence.txt
Coronavirus/Aminoacids-Mapper/scripts/gene_bank_reader/inputs/: input.txt
Coronavirus/Aminoacids-Mapper/scripts/gene_bank_reader/outputs/: output.txt
Coronavirus/Aminoacids-Mapper/scripts/get_rna_sequence/: coronavirus-sequence.txt  get_sequence.py
Coronavirus/Aminoacids-Mapper/src/: main.cpp
Coronavirus/Aminoacids-Mapper/src/solver/: CMakeLists.txt  solver.cpp  solver.h
SIRS-Model/: CMakeLists.txt  README.md  run_valgrind.sh
SIRS-Model/inputs/: infection-vital-dynamics.ini  infection-without-vital-dynamics.ini  influenza-control.ini  influenza-no-control.ini
SIRS-Model/scripts/: plot_comparison.py  plot_solution.py
SIRS-Model/src/: main.cpp
SIRS-Model/src/ini_parser/: CMakeLists.txt  ini_file_sections.h
SIRS-Model/src/ode_solver/: CMakeLists.txt  ode_solver.cpp  ode_solver.h
SIRS-Model/src/options/: user_options.cpp  user_options.h
(+223 files in other folders)
